--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -32,13 +32,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/detail_backdrop"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:scaleType="fitXY"
-                android:contentDescription="@string/image_for_backdrop" />
+                android:layout_height="match_parent" >
+
+                <ImageView
+                        android:id="@+id/detail_backdrop"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitXY"
+                        android:contentDescription="@string/image_for_backdrop" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/darker_gradient_background"
+                    android:contentDescription="@null" />
+
+            </FrameLayout>
 
             <ImageView
                 android:id="@+id/image_play_icon_backdrop"
@@ -59,29 +71,41 @@
 
             <ImageView
                 android:id="@+id/detail_poster"
-                android:layout_width="180dp"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:padding="10dp"
+                android:paddingLeft="12dp"
+                android:paddingTop="20dp"
                 android:contentDescription="@string/image_for_poster" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingLeft="10dp"
-                android:paddingTop="10dp">
+                android:paddingLeft="12dp">
 
                 <TextView
                     android:id="@+id/detail_title"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:paddingTop="30dp"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/detail_genres"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:paddingRight="5dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:gravity="center_vertical">
+                    android:gravity="center_vertical"
+                    android:paddingTop="10dp">
 
                     <RatingBar
                         android:id="@+id/rating_bar"
@@ -98,14 +122,38 @@
                         android:id="@+id/detail_rating"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:paddingLeft="5dp" />
+                        android:paddingLeft="5dp"
+                        android:textColor="#999"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="10dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/runtime"
+                        android:paddingRight="5dp"
+                        android:textColor="#999"/>
+
+                    <TextView
+                        android:id="@+id/detail_runtime"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
                 <TextView
                     android:id="@+id/detail_date"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"/>
+
+
 
             </LinearLayout>
 
@@ -121,28 +169,35 @@
                 android:id="@+id/detail_plot"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:padding="10dp" />
+                android:padding="12dp" />
 
-            <RelativeLayout
-                android:id="@+id/film_reel_top"
+            <LinearLayout
+                android:id="@+id/trailers_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/background"
-                android:visibility="gone" />
+                android:visibility="gone"
+                android:orientation="vertical"
+                android:paddingBottom="20dp"
+                android:paddingTop="10dp">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/detail_trailers"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#222"
-                android:visibility="gone" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/background" />
 
-            <RelativeLayout
-                android:id="@+id/film_reel_bottom"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/background"
-                android:visibility="gone" />
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/detail_trailers"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#222"/>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/background"
+                   />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/detail_reviews_title"
@@ -152,7 +207,8 @@
                 android:text="@string/reviews"
                 android:padding="10dp"
                 android:background="#f5f5f5"
-                android:visibility="gone" />
+                android:visibility="gone"
+                android:textColor="@color/colorAccent"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/detail_reviews"
