--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -31,12 +31,13 @@
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/detail_backdrop_height"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginEnd="64dp">
+            app:expandedTitleMarginEnd="64dp"
+            >
 
         <ImageView
             android:id="@+id/detail_backdrop"
@@ -45,6 +46,12 @@
             android:scaleType="centerCrop"
             android:fitsSystemWindows="true"
             app:layout_collapseMode="parallax"
+            android:contentDescription="@null" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/darker_gradient_background"
             android:contentDescription="@null" />
 
         <android.support.v7.widget.Toolbar
