--- a/app/src/main/res/layout-sw600dp/activity_movie_list.xml
+++ b/app/src/main/res/layout-sw600dp/activity_movie_list.xml
@@ -66,12 +66,20 @@
 
         </LinearLayout>
 
-        <fragment
-            android:id="@+id/detail_fragment"
-            android:name="com.example.julia.popularmovies.details.DetailFragment"
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:fillViewport="true">
+
+            <fragment
+                android:id="@+id/detail_fragment"
+                android:name="com.example.julia.popularmovies.details.DetailFragment"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+        </android.support.v4.widget.NestedScrollView>
 
     </LinearLayout>
 
